# TIKTOK_AGENT

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  reader.py
documents/: transcriptions.json
prompts/: copywriter.md
